compile_server/temp/1690590086692_43.compile_error
./temp/1690590086692_43.cpp: In member function ‘bool Solution::isPalindrome(int)’:
./temp/1690590086692_43.cpp:12:8: error: ‘n’ was not declared in this scope
     if(n==-10)return false;
        ^
